<resources>
    <!-- App name -->
    <string name="app_name">Read</string>

    <!-- Activity name -->
    <string name="title_activity_main">MainActivity</string>

    <!-- Navigation tabs names -->
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>

    <!-- Prompt hint for the search tool -->
    <string name="search_hint">Search books</string>

    <!-- Titles of menu items in the action bar -->
    <string name="menu_search">Search books</string>
    <string name="menu_settings">Settings</string>

    <!-- Titles of pages in the book details fragment -->
    <string name="book_details">Details</string>
    <string name="book_id_card">ID Card</string>
    <string name="book_summary">Summary</string>

    <!--
    *
    * EMPTY VIEWS
    *
    *-->

    <!-- Title text that informs that the library is empty [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Your personal library is empty&#8230;</string>

    <!-- Subtitle text for the empty view that prompts the user to add a book [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a new book</string>

    <!-- Text to display in the list when there are no earthquakes [CHAR LIMIT=NONE] -->
    <string name="no_books">No books found&#8230;</string>

    <!-- Text to display in the list when there are no internet connection activated [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>

    <!-- Content descriptions-->
    <string name="dummy_books">Dummy books</string>
    <string name="book_cover">Book cover</string>
    <string name="favorite_button">Favorite button</string>

    <!-- Captions -->
    <string name="book_authors_caption">Authors</string>
    <string name="book_published_on_caption">Published on</string>
    <string name="book_publisher_caption">Publisher</string>
    <string name="book_language_caption">Language</string>
    <string name="book_categories_caption">Categories</string>
    <string name="book_pages_caption">Pages</string>
    <string name="book_ISBN_caption">ISBN</string>

    <!-- Preference Titles -->
    <string name="internet_search_header">Internet Search</string>
    <string name="library_data_header">Library Data</string>

    <!-- Preference Keys -->
    <string name="key_max_results">key_max_results</string>
    <string name="key_filter_lang">key_filter_lang</string>
    <string name="key_set_lang">key_set_lang</string>
    <string name="key_erase_database">key_erase_database</string>

    <!-- Internet Search Preferences -->
    <string name="set_results_limit_title">Set results limit in book queries</string>
    <string name="filter_languages_title">Filter language in book queries</string>
    <string name="selected_language">Selected language :</string>
    <string name="select_language">Select language</string>

    <!-- Library Data Preferences -->
    <string name="erase_all_title">Erase all books in library</string>
    <string name="clear_the_database">Clear the database</string>
    <string name="erase_all_message">Are you sure you want to erase your database of favorite books?</string>

    <!-- Separators for string building from array lists of strings -->
    <string name="new_line_separator">New line separator</string>
    <string name="comma_separator">Comma separator</string>
    <string name="comma_space">,&#160;</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

</resources>
