<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.yaym.read.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_bookIdCardFragment"
            app:destination="@id/bookIdCardFragment" />
        <action
            android:id="@+id/action_navigation_home_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.yaym.read.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" >
        <action
            android:id="@+id/action_navigation_explore_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_navigation_explore_to_bookIdCardFragment"
            app:destination="@id/bookIdCardFragment" />
    </fragment>
    <fragment
        android:id="@+id/bookIdCardFragment"
        android:name="com.yaym.read.ui.detail.BookIdCardFragment"
        android:label="fragment_book_id_card"
        tools:layout="@layout/fragment_book_id_card" >
        <action
            android:id="@+id/action_bookIdCardFragment_to_bookSummaryFragment"
            app:destination="@id/bookSummaryFragment" />
    </fragment>
    <fragment
        android:id="@+id/bookSummaryFragment"
        android:name="com.yaym.read.ui.detail.BookSummaryFragment"
        android:label="fragment_book_summary"
        tools:layout="@layout/fragment_book_summary" >
        <action
            android:id="@+id/action_bookSummaryFragment_to_bookIdCardFragment"
            app:destination="@id/bookIdCardFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.yaym.read.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"/>

</navigation>